# dcc-mcp-renderdoc

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/dcc_mcp_renderdoc/: __init__.py  __version__.py  _target_control.py  downloader.py  runtime.py  server.py
src/dcc_mcp_renderdoc/skills/renderdoc-analysis/: SKILL.md  tools.yaml
src/dcc_mcp_renderdoc/skills/renderdoc-analysis/metadata/: depends.md
src/dcc_mcp_renderdoc/skills/renderdoc-analysis/scripts/: export_thumbnail.py  export_timeline.py  inspect_capture.py
src/dcc_mcp_renderdoc/skills/renderdoc-capture/: SKILL.md  tools.yaml
src/dcc_mcp_renderdoc/skills/renderdoc-capture/scripts/: capture_process.py  capture_program.py  get_version.py
tests/: live_renderdoc_smoke.py  renderdoc_smoke.c  test_download.py  test_package.py  test_runtime.py
tools/: download_latest_renderdoc.py  lint_skills.py
