[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-renderdoc"
version = "0.2.0"
description = "RenderDoc capture and replay automation skills for DCC-MCP"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "loonghao", email = "hal.long@outlook.com" }]
keywords = ["renderdoc", "mcp", "graphics-debugging", "game-development", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
]
dependencies = ["dcc-mcp-core>=0.19.38,<1.0.0"]

[project.urls]
Homepage = "https://github.com/dcc-mcp/dcc-mcp-renderdoc"
Repository = "https://github.com/dcc-mcp/dcc-mcp-renderdoc"
Issues = "https://github.com/dcc-mcp/dcc-mcp-renderdoc/issues"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "ruff>=0.8", "twine>=6"]

[project.scripts]
dcc-mcp-renderdoc = "dcc_mcp_renderdoc.server:main"

[project.entry-points."dcc_mcp.adapters"]
renderdoc = "dcc_mcp_renderdoc:RenderDocMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_renderdoc"]
artifacts = ["src/dcc_mcp_renderdoc/skills/**"]

[tool.hatch.build.targets.sdist]
include = [
  "src/dcc_mcp_renderdoc",
  "tests",
  "tools",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "release-please-config.json",
  ".release-please-manifest.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"src/dcc_mcp_renderdoc/skills/**/scripts/*.py" = ["E501"]
